network-policy/mongodb-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-netpol
  namespace: blog-app
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: mongodb   # Mengizinkan koneksi dari sesama Pod MongoDB
    - podSelector:
        matchLabels:
          app: blog-app  # Mengizinkan koneksi dari Pod blog-app
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: mongodb   # Mengizinkan koneksi ke sesama Pod mongoDB
        matchLabels:
          kubernetes.io/metadata.name: kube-system   # Mengizinkan akses ke layanan DNS di kube-system
